2003-03-12  huysmans

	* xfrun/: Makefile.am, Makefile.in, xfrun.c: Safe terminal option
	in history and allow xfrun to open directories. Patch by James
	Tappin.

2003-03-11  xfce

	* xftaskbar/xftaskbar.c: Fix compiler warnings

2003-03-01  xfce

	* Makefile.in, aclocal.m4, config.h.in, configure, ltcf-c.sh,
	ltconfig, ltmain.sh, doc/Makefile.in, doc/html/Makefile.in,
	doc/images/Makefile.in, doc/xml/Makefile.in, gdm/Makefile.in,
	scripts/Makefile.in, xfce4-about/Makefile.in, xfrun/Makefile.in,
	xftaskbar/Makefile.in, xftaskbar/plugin/Makefile.in: [no log
	message]

2003-02-28  bmeurer

	* TODO: [no log message]

2003-02-28  xfce

	* Makefile.in, aclocal.m4, configure, ltmain.sh, doc/Makefile.in,
	doc/html/Makefile.in, doc/images/Makefile.in, doc/xml/Makefile.in,
	gdm/Makefile.in, scripts/Makefile.in, xfce4-about/Makefile.in,
	xfrun/Makefile.in, xftaskbar/Makefile.in,
	xftaskbar/plugin/Makefile.in: Fix xfce-mcs-manager API/ABI
	versionning Update configure/libtool to use libtool 1.4.3

2003-02-28  bmeurer

	* ltcf-c.sh, ltconfig, ltmain.sh, aclocal.m4, configure,
	Makefile.in, configure.ac, doc/html/Makefile.in, doc/Makefile.in,
	doc/images/Makefile.in, doc/xml/Makefile.in, gdm/Makefile.in,
	scripts/Makefile.in, xfce4-about/Makefile.in, xfrun/Makefile.in,
	xftaskbar/plugin/Makefile.in, xftaskbar/Makefile.in: Fixed
	xfce-mcs-manager version problem.

2003-02-27  huysmans

	* xfce4-about/AUTHORS: Update credits file. Initial try

2003-02-26  xfce

	* Makefile.in, aclocal.m4, config.guess, config.sub, configure,
	depcomp, doc/Makefile.in, doc/html/Makefile.in,
	doc/images/Makefile.in, doc/xml/Makefile.in, gdm/Makefile.in,
	scripts/Makefile.in, xfce4-about/Makefile.in, xfrun/Makefile.in,
	xfrun/xfrun.c, xftaskbar/Makefile.in, xftaskbar/plugin/Makefile.in,
	xftaskbar/plugin/xftaskbar_plugin.c: Apply Benedikt Meurer
	<Benedikt.Meurer@unix-ag.uni-siegen.de> patch Replace all 
	occurences of g_getenv("HOME") with g_get_home_dir() Regenerate all